<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/live_change_iv_head"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/icon" />

        <ImageView
            android:id="@+id/live_change_iv_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/live_change_iv_head"
            android:src="@mipmap/icon_grade_30" />

        <TextView
            android:id="@+id/live_change_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/live_change_iv_grade"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/live_change_iv_grade"
            android:text="@string/main_tv_title"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/live_change_iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/live_change_tv_name"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@id/live_change_tv_name"
            android:src="@mipmap/icon_ios" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/live_change_iv_grade"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@id/live_change_iv_head"
            android:text="@string/zhibo_tv_des"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="3"
            android:background="@drawable/shape_blue">

            <LinearLayout
                android:id="@+id/live_change_ll_book"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:text="@string/live_tv_bookTa"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="15dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/live_change_tv_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/zhibo_tv_total"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_white"
            android:gravity="center"
            android:text="@string/live_tv_jubao"
            android:textColor="@color/black" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/text_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/live_change_iv_live"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_live_red" />

        <TextView
            android:id="@+id/live_change_tv_des"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/live_change_iv_live"
            android:gravity="center"
            android:text="@string/zhibo_tv_des"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/live_change_iv_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_top_redpoint" />

        <TextView
            android:id="@+id/live_change_tv_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/live_tv_time"
            android:textColor="@color/text_gray"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/live_change_iv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/live_change_tv_time"
            android:src="@mipmap/icon_location" />

        <TextView
            android:id="@+id/live_change_tv_location"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/zhibo_tv_des"
            android:textColor="@color/text_gray"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/live_change_iv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/icon_live_phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/live_tv_logo"
            android:textColor="@color/text_gray"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>