<?xml version="1.0" encoding="utf-8"?><!--主页面的布局-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/main_iv_head"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/tab_user" />

        <TextView
            android:id="@+id/main_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_rb_zhibo"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/tab_search" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/text_gray" />

    <FrameLayout
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/main_rg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/main_rb_zhibo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/selector_seeding"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/main_rb_zhibo"
            android:textColor="@drawable/selector_main_color"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/main_rb_game"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/selector_game"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/main_rb_game"
            android:textColor="@drawable/selector_main_color"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/main_rb_suipai"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/selector_suipai"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/main_rb_suipai"
            android:textColor="@drawable/selector_main_color"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/main_rb_ent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/selector_yule"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/main_rb_ent"
            android:textColor="@drawable/selector_main_color"
            android:textSize="12sp" />

    </RadioGroup>

</LinearLayout>


