<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backaround_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/match_iv_back"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/tab_back" />

        <TextView
            android:id="@+id/match_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/match_tv_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/ago_rl_play"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/ago_iv_backaround"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ago_iv_play"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@mipmap/ic_start_live" />

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shape_yellow"
                        android:gravity="center"
                        android:text="@string/ago_tv_ing"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/touming_dark">

                    <TextView
                        android:id="@+id/ago_tv_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:paddingRight="10dp"
                        android:text="@string/zhibo_tv_total"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/ago_iv_people"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/ago_tv_total"
                        android:paddingRight="5dp"
                        android:src="@mipmap/man" />

                    <TextView
                        android:id="@+id/ago_tv_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="5dp"
                        android:text="@string/ago_tv_left"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/ago_tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@id/ago_iv_people"
                        android:layout_alignTop="@id/ago_tv_total"
                        android:layout_marginRight="15dp"
                        android:layout_toRightOf="@id/ago_tv_left"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingBottom="3dp"
                        android:text="@string/zhibo_tv_name"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ago_ll_ago"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/ic_column_h" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/ago_tv_title"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.example.lanouhn.zhibo.view.NoScrollRecyclerView
                android:id="@+id/ago_recycle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

            </com.example.lanouhn.zhibo.view.NoScrollRecyclerView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
