<?xml version="1.0" encoding="utf-8"?><!--播放页面的布局-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/view_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <io.vov.vitamio.widget.VideoView
            android:id="@+id/surface_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/author_info"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/view_play">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/dark_blue">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/play_iv_head"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/play_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/play_iv_head"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/main_tv_title"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/play_tv_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/play_iv_head"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/main_tv_title"
                android:textColor="@color/text_gray"
                android:textSize="12sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/play_rl_book"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/book">

            <View
                android:id="@+id/play_view"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/play_iv_add"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@mipmap/ic_subscribe" />

                <TextView
                    android:id="@+id/play_tv_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/play_tv_book"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/play_tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/play_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/zhibo_tv_total"
                android:textColor="@color/gray"
                android:textSize="10sp" />

        </RelativeLayout>

    </LinearLayout>

    <com.example.lanouhn.zhibo.widget.ChatListView
        android:id="@+id/chat_listview"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_above="@+id/bottom_bar"
        android:layout_below="@id/author_info"
        android:divider="@null"
        android:listSelector="@android:color/transparent"
        android:scrollbars="none"
        android:transcriptMode="alwaysScroll" />

    <fragment
        android:id="@+id/bottom_bar"
        android:name="com.example.lanouhn.zhibo.fragment.PlayBottomFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        tools:layout="@layout/fragment_play_bottom" />

</RelativeLayout>
